# feedBack-plugin-rig-builder

./: .gitignore  AMP_LOUDNESS.md  CLAUDE.md  HANDOFF.md  HANDOFF_ADVANCED_STUDIO.md  INSTALL.md  README.md  WHATS_NEW.md  curation_template.csv  extract_gear_photos.py  import_curation_csv.py  inspect_rs_knobs.py  inspect_tone3000.py  pedal_canvas.js  pedal_inspirations.csv  plugin.json  routes.py  rs_gear_to_vst.json  rs_knob_to_vst_param.json  rs_to_real.json  screen.html  screen.js
data/: amp_loudness_model.json  cab_loudness_makeup.json  default_captures.json  extra_gear.json  pedal_loudness_model.json  pedal_type_tags.json  rb_cab_overrides.json  real_cab_catalog.json  rs_cab_mic_map.json  rs_gear_to_vst.json  rs_knob_to_vst_param.json  rs_to_real.json  vst_display_names.json  vst_packs.json
docs/: AMP_CORE_FIDELITY_CHECKLIST.md  AUDIT_2026-07_ROBUSTNESS.md  BASS_AMP_REWORK_HANDOFF.md  CHANNEL_LOUDNESS_CALIBRATION.md  CHORUS_PHASER_MODELING_GUIDE.md  CLAUDE.md  COMPRESSOR_MODELING_GUIDE.md  DISTORTION_MODELING_GUIDE.md  FUZZ_MODELING_GUIDE.md  HANDOFF.md  MARSTEN_AMP_DEBUG_HANDOFF.md  REFERENCE_MATCHING_WORKFLOW.md
rb_core/: __init__.py  cab_synth.py  tone3000_client.py
tests/: rig_vst_prompt.test.js  test_amp_channel_loudness.py  test_default_tone_fallback.py  test_feedpak_reader.py  test_manifest.py  test_tone_read_no_unpack.py  test_vst_pack_download.py  test_vst_path_rehome.py  test_watcher_paths.py
tools/: amp_lufs_harness.cpp.in  apply_vst_state.py  (+24 more)
vst/src/RBFinalLeveler/: CMakeLists.txt
vst/src/RBFinalLeveler/Source/: PluginProcessor.cpp
(+1905 files in other folders)
